# gel-examples

./: README.md  package-lock.json
agent-memory-triggers/: LICENSE  README.md  pyproject.toml
agent-memory-triggers/dbschema/: default.gel
agent-memory-triggers/dbschema/migrations/: 00001-m1wyx65.edgeql
agent-memory-triggers/src/agent_memory_triggers/: __init__.py  db.py  gui.py  main.py
agent-memory-triggers/src/agent_memory_triggers/agents/: extractor.py  summarizer.py  talker.py
agent-memory-triggers/src/agent_memory_triggers/common/: types.py
agent-memory-triggers/src/agent_memory_triggers/queries/: delete.edgeql  insert.edgeql
agent-memory-triggers/src/agent_memory_triggers/routers/: agent_api.py  chat_api.py
fastapi-gelai/: .gitignore  pyproject.toml
fastapi-gelai/app/: main.py  searcher.py  web.py
fastapi-gelai/app/queries/: add_message.edgeql  add_message_async_edgeql.py  create_chat.edgeql  create_chat_async_edgeql.py  create_user.edgeql  create_user_async_edgeql.py  get_chat_by_id.edgeql  get_chat_by_id_async_edgeql.py  get_chats.edgeql  get_chats_async_edgeql.py  get_messages.edgeql  get_messages_async_edgeql.py  get_user_by_name.edgeql  get_user_by_name_async_edgeql.py  get_users.edgeql  get_users_async_edgeql.py  search_chats.edgeql  search_chats_async_edgeql.py
fastapi-gelai/app/sample_data/: inserts.edgeql  inserts_async_edgeql.py
fastapi-gelai/dbschema/: default.esdl
langchain-codegen/: Makefile  README.md  pyproject.toml
langchain-codegen/dbschema/: default.gel
langchain-codegen/md_docs/: index.md
langchain-codegen/md_docs/cloud/: cli.md  http_gql.md  index.md  web.md
langchain-codegen/md_docs/cloud/deploy/: fly.md  index.md  netlify.md
langchain-codegen/md_docs/intro/: branches.md  clients.md  instances.md  migrations.md  projects.md  schema.md
langchain-codegen/md_docs/intro/tutorials/: gel_drizzle_booknotes.md
langchain-codegen/md_docs/reference/: index.md
langchain-codegen/md_docs/reference/ai/: extai.md  extvectorstore.md  http.md  index.md  javascript.md  vectorstore_python.md
langchain-codegen/md_docs/reference/auth/: built_in_ui.md  email_password.md  http.md  index.md  magic_link.md  oauth.md  webauthn.md  webhooks.md
langchain-codegen/md_docs/reference/datamodel/: access_policies.md  aliases.md  annotations.md  branches.md  comparison.md  computeds.md  constraints.md  extensions.md  functions.md  future.md  globals.md  index.md  indexes.md  inheritance.md  linkprops.md  links.md  migrations.md  modules.md  mutation_rewrites.md  objects.md  primitives.md  properties.md  triggers.md
langchain-codegen/md_docs/reference/edgeql/: analyze.md  delete.md  for.md  group.md  index.md  insert.md  literals.md  parameters.md  path_resolution.md  paths.md  select.md  sets.md  transactions.md  types.md  update.md  with.md
langchain-codegen/md_docs/reference/reference/: index.md
langchain-codegen/md_docs/reference/running/: backend_ha.md  configuration.md  http.md  index.md  local.md
langchain-codegen/md_docs/reference/stdlib/: abstract.md  array.md  bool.md  bytes.md  cfg.md  constraints.md  datetime.md  deprecated.md  enum.md  fts.md  generic.md  index.md  json.md  math.md  net.md  numbers.md  objects.md  pg_trgm.md  pg_unaccent.md  pgcrypto.md  pgvector.md  postgis.md  range.md  sequence.md  set.md  string.md  sys.md  tuple.md  type.md  uuid.md
langchain-codegen/md_docs/reference/using/: clients.md  connection.md  datetime.md  http.md  index.md  projects.md  sql_adapter.md
langchain-codegen/md_docs/resources/: upgrading.md
langchain-codegen/src/langchain_codegen/: __init__.py  agent.py  main.py  rag.py
llamaindex-gel-helper/: README.md  example_inserts.edgeql  pyproject.toml
llamaindex-gel-helper/dbschema/: default.gel
llamaindex-gel-helper/dbschema/migrations/: 00001-m16oddm.edgeql  00002-m1ruypf.edgeql
llamaindex-gel-helper/md_docs/intro/: cli.md  edgeql.md  index.md
llamaindex-gel-helper/src/llamaindex_gel_helper/: __init__.py  agent.py  rag.py
vectorstore-image-search/: README.md  gel.toml  pyproject.toml
vectorstore-image-search/app/: constants.py  main.py  store_embeddings.py  update.py  vector_store.py
vectorstore-image-search/app/templates/: search.html
vectorstore-test/: gel.toml  main.py  pyproject.toml
vectorstore-test/app/: constants.py  main.py  store_embeddings.py  update.py  vector_store.py
vectorstore-test/app/templates/: search.html
vectorstore-test/dbschema/: default.gel
vectorstore-test/dbschema/migrations/: 00001-m13byy5.edgeql
(+311 files in other folders)
