[project]
name = "searchbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "edgedb>=2.2.0",
    "fastapi[standard]>=0.115.7",
    "googlesearch-python>=1.3.0",
    "httpx-sse>=0.4.0",
    "openai>=1.60.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[project.optional-dependencies]
standard = [
    "fastapi>=0.115.7",
]
